<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="20dp" >

        <TextView
            android:id="@+id/workingsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:maxLines="2"
            android:textAlignment="textEnd"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/resultsTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:textAlignment="textEnd"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workingsTV"
            tools:layout_editor_absoluteX="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="@string/all_clear"
            android:textColor="#ff0000"
            android:onClick="allClearAction"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/backspace"
            android:textColor="#ff0000"
            android:onClick="backSpaceAction"/>

        <Button
            style="@style/buttonNumber"
            android:text=""
            tools:ignore="SpeakableTextPresentCheck" />
        <Button
            style="@style/buttonOperation"
            android:text="@string/plus"/>
    </LinearLayout>

    <LinearLayout style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="@string/_1"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/_2"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/_3"/>
        <Button
            style="@style/buttonOperation"
            android:text="@string/minus"/>
    </LinearLayout>

    <LinearLayout style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="@string/_4"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/_5"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/_6"/>
        <Button
            style="@style/buttonOperation"
            android:text="@string/multiply"/>
    </LinearLayout>

    <LinearLayout style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="@string/_7"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/_8"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/_9"/>
        <Button
            style="@style/buttonOperation"
            android:text="@string/divide"/>
    </LinearLayout>

    <LinearLayout style="@style/buttonRow">
        <Button
            style="@style/buttonNumber"
            android:text="@string/dec_dot"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/_0"/>
        <Button
            style="@style/buttonNumber"
            android:text="@string/equals"
            android:layout_weight="2"
            android:onClick="equalsAction"/>
    </LinearLayout>

</LinearLayout>
